[MekFactory] feat: support Mekanism Extras factories and raise throughput